# YSDefine

./: CMakeLists.txt  README.md  ysDefine.h  ysDefine.hpp  ysdefine.cmake
